connectrpc-axum/tests/ui/semantic_handler_invalid_server_stream.stderr
error[E0277]: the trait bound `ConnectHandlerWrapper<fn(connectrpc_axum::ConnectRequest<HelloResponse>) -> impl futures::Future<Output = Result<connectrpc_axum::ConnectResponse<connectrpc_axum::StreamBody<futures::stream::Empty<Result<HelloResponse, connectrpc_axum::ConnectError>>>>, connectrpc_axum::ConnectError>> {say_hello_stream}, HelloRequest, HelloResponse>: Handler<_, _>` is not satisfied
  --> tests/ui/semantic_handler_invalid_server_stream.rs:53:62
   |
53 |     let _ = HelloWorldServiceBuilder::new().say_hello_stream(say_hello_stream);
   |                                             ---------------- ^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |                                             |
   |                                             required by a bound introduced by this call
   |
   = help: the trait `Handler<_, _>` is not implemented for `ConnectHandlerWrapper<fn(connectrpc_axum::ConnectRequest<HelloResponse>) -> impl futures::Future<Output = Result<connectrpc_axum::ConnectResponse<connectrpc_axum::StreamBody<futures::stream::Empty<Result<HelloResponse, connectrpc_axum::ConnectError>>>>, connectrpc_axum::ConnectError>> {say_hello_stream}, HelloRequest, HelloResponse>`
   = note: Consider using `#[axum::debug_handler]` to improve the error message
   = help: the following other types implement trait `Handler<T, S>`:
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, A16, connectrpc_axum::ConnectRequest<Req>), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, A16, connectrpc_axum::ConnectRequest<Req>, connectrpc_axum::StreamBody<St>), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, A16, connectrpc_axum::ConnectRequest<Streaming<Req>>, Resp), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, A16, connectrpc_axum::ConnectRequest<Streaming<Req>>, connectrpc_axum::StreamBody<St>), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, connectrpc_axum::ConnectRequest<Req>), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, connectrpc_axum::ConnectRequest<Req>, connectrpc_axum::StreamBody<St>), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, connectrpc_axum::ConnectRequest<Streaming<Req>>, Resp), S>`
             `ConnectHandlerWrapper<F, Req, Resp>` implements `Handler<(A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15, connectrpc_axum::ConnectRequest<Streaming<Req>>, connectrpc_axum::StreamBody<St>), S>`
           and $N others
note: required by a bound in `HelloWorldServiceBuilder::<S>::say_hello_stream`
  --> tests/ui/semantic_handler_invalid_server_stream.rs:38:64
   |
36 |     fn say_hello_stream<F, T>(self, _handler: F) -> Self
   |        ---------------- required by a bound in this associated function
37 |     where
38 |         ConnectHandlerWrapper<F, HelloRequest, HelloResponse>: Handler<T, S>,
   |                                                                ^^^^^^^^^^^^^ required by this bound in `HelloWorldServiceBuilder::<S>::say_hello_stream`
